--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,8 +1,8 @@
 .page-footer {
-  background-color: rgb(244, 104, 204);
+  background-color: lightpink;
   margin-top: 10rem;
   padding-top: 2%;
-  color: lightblue;
+  color: sandybrown;
   position: fixed;
   left: 0;
   bottom: 0;
