--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,9 +1,9 @@
 .navbar {
-  background-color: rgb(255, 106, 255)
+  background-color: lightpink
 }
 
 a {
-  color: lightblue;
+  color: black;
   font-size: 14pt;
 }
 
