--- a/client/src/components/SavedResult/style.css
+++ b/client/src/components/SavedResult/style.css
@@ -1,10 +1,10 @@
 .delete {
   background-color: lightskyblue;
-  color: #fff;
+  color: #black;
 }
 
 .view {
-  background-color: #yellow;
+  background-color: #D9A711;
 }
 
 .card {
