--- a/client/src/components/SearchForm/style.css
+++ b/client/src/components/SearchForm/style.css
@@ -1,7 +1,7 @@
 .submitBtn {
-  background-color: darkblue;
+  background-color: lightpink;
   margin-bottom: 8%;
-  color: lightblue;
+  color: sandybrown;
 }
 
 .submitBtn:hover {
